--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fs-boot",
+    "version": "0.0.6",
     "description": "Pure JavaScript implementation of common file-system API components",
-    "version": "0.0.3",
     "homepage": "http://github.com/kriskowal/fs-boot/",
     "author": "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
     "bugs": {
@@ -15,12 +15,12 @@
         }
     ],
     "main": "fs-boot.js",
-    "dependencies": {
-        "q": "0.2.7"
-    },
     "repository": {
         "type": "git",
         "url": "http://github.com/kriskowal/fs-boot.git"
+    },
+    "devDependences": {
+        "test": "0.3.0"
     },
     "engines": {
         "node": ">=0.2.0"
