--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "fs-boot",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "Pure JavaScript implementation of common file-system API components",
     "homepage": "http://github.com/kriskowal/fs-boot/",
     "author": "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
     "bugs": {
         "mail": "kris@cixar.com",
-        "web": "http://github.com/kriskowal/fs-boot/issues"
+        "url": "http://github.com/kriskowal/fs-boot/issues"
     },
     "licenses": [
         {
@@ -19,7 +19,7 @@
         "type": "git",
         "url": "http://github.com/kriskowal/fs-boot.git"
     },
-    "devDependences": {
+    "devDependencies": {
         "test": "0.3.0"
     },
     "engines": {
